// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`write-pages one category, one page with image example should write a category/page/readme.md file using the page template 1`] = `
"# [Category](../readme.md)

## Page

> Page description.

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: bool

### Set to \`true\` (default value)
\`\`\`bash
defaults write com.apple.category page -bool true
\`\`\`
![Example output with value set to true](true.png)

### Set to \`false\`
\`\`\`bash
defaults write com.apple.category page -bool false
\`\`\`
![Example output with value set to false](false.png)

### Read current value
\`\`\`bash
defaults read com.apple.category page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page
\`\`\`
"
`;

exports[`write-pages one category, one page with text and possible values example should write a category/page/readme.md file using the page template 1`] = `
"# [Category](../readme.md)

## Page

> Page description.

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: string
  * start
  * middle
  * end

### Set to \`start\`
\`\`\`bash
defaults write com.apple.category page -string start
\`\`\`
- output when value is start

### Set to \`middle\` (default value)
\`\`\`bash
defaults write com.apple.category page -string middle
\`\`\`
- output when value is middle

### Set to \`end\`
\`\`\`bash
defaults write com.apple.category page -string end
\`\`\`
- output when value is end

### Read current value
\`\`\`bash
defaults read com.apple.category page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page
\`\`\`
"
`;

exports[`write-pages one category, one page with text example with an after command should write a category/page/readme.md file using the page template 1`] = `
"# [Category](../readme.md)

## Page

> Page description.

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: string

### Set to \`~/Desktop\` (default value)
\`\`\`bash
defaults write com.apple.category page -string ~/Desktop && killall App
\`\`\`
- output when value is ~/Desktop

### Set to \`~/Pictures\`
\`\`\`bash
defaults write com.apple.category page -string ~/Pictures && killall App
\`\`\`
- output when value is ~/Pictures

### Read current value
\`\`\`bash
defaults read com.apple.category page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page && killall App
\`\`\`
"
`;

exports[`write-pages one category, one page with text example with requirements should write a category/page/readme.md file using the page template 1`] = `
"# [Category](../readme.md)

## Page

> Page description.

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: string

### Requirements
- [\`com.apple.category2 another-key\`](../../another-category/another-key/readme.md#set-to-true) must be set to \`true\`
- [\`com.apple.category2 a-third-key\`](../../a-third-category/a-third-key/readme.md#set-to-0.5) must be set to \`0.5\`

### Set to \`true\` (default value)
\`\`\`bash
defaults write com.apple.category page -string true && killall App
\`\`\`
- output when value is true

### Set to \`false\`
\`\`\`bash
defaults write com.apple.category page -string false && killall App
\`\`\`
- output when value is false

### Read current value
\`\`\`bash
defaults read com.apple.category page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page && killall App
\`\`\`
"
`;

exports[`write-pages one category, one page with text example with special chars values should write a category/page/readme.md file using the page template 1`] = `
"# [Category](../readme.md)

## Page

> Page description.

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: string

### Set to \`~/Desktop\` (default value)
\`\`\`bash
defaults write com.apple.category page -string ~/Desktop
\`\`\`
- output when value is ~/Desktop

### Set to \`~/Pictures\`
\`\`\`bash
defaults write com.apple.category page -string ~/Pictures
\`\`\`
- output when value is ~/Pictures

### Read current value
\`\`\`bash
defaults read com.apple.category page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page
\`\`\`
"
`;

exports[`write-pages one category, one page with video example should write a category/page/readme.md file using the page template 1`] = `
"# [Category](../readme.md)

## Page

> Page description.

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: float

### Set to \`0\` (default value)
\`\`\`bash
defaults write com.apple.category page -float 0
\`\`\`
[Link to a demo video](0.mp4)

### Set to \`0.5\`
\`\`\`bash
defaults write com.apple.category page -float 0.5
\`\`\`
[Link to a demo video](0.5.mp4)

### Read current value
\`\`\`bash
defaults read com.apple.category page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page
\`\`\`
"
`;

exports[`write-pages one category, two pages should write a category/page1/readme.md file using the page template 1`] = `
"# [Category](../readme.md)

## Page 1

> Page 1 description.

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: bool

### Set to \`true\` (default value)
\`\`\`bash
defaults write com.apple.category page1 -bool true
\`\`\`
- output when value is true

### Set to \`false\`
\`\`\`bash
defaults write com.apple.category page1 -bool false
\`\`\`
- output when value is false

### Read current value
\`\`\`bash
defaults read com.apple.category page1
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page1
\`\`\`
"
`;

exports[`write-pages one category, two pages should write a category/page2/readme.md file using the page template 1`] = `
"# [Category](../readme.md)

## Page 2

> Page 2 description.

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: bool

### Set to \`true\`
\`\`\`bash
defaults write com.apple.category page2 -bool true
\`\`\`
- output when value is true

### Set to \`false\` (default value)
\`\`\`bash
defaults write com.apple.category page2 -bool false
\`\`\`
- output when value is false

### Read current value
\`\`\`bash
defaults read com.apple.category page2
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page2
\`\`\`
"
`;

exports[`write-pages two categories, one page in each should write a category1/page/readme.md file using the page template 1`] = `
"# [Category 1](../readme.md)

## Page

> Page description.

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: bool

### Set to \`true\` (default value)
\`\`\`bash
defaults write com.apple.category1 page -bool true
\`\`\`
- output when value is true

### Set to \`false\`
\`\`\`bash
defaults write com.apple.category1 page -bool false
\`\`\`
- output when value is false

### Read current value
\`\`\`bash
defaults read com.apple.category1 page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category1 page
\`\`\`
"
`;

exports[`write-pages two categories, one page in each should write a category2/page/readme.md file using the page template 1`] = `
"# [Category 2](../readme.md)

## Page

> Page description.

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: bool

### Set to \`true\`
\`\`\`bash
defaults write com.apple.category2 page -bool true
\`\`\`
- output when value is true

### Set to \`false\` (default value)
\`\`\`bash
defaults write com.apple.category2 page -bool false
\`\`\`
- output when value is false

### Read current value
\`\`\`bash
defaults read com.apple.category2 page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category2 page
\`\`\`
"
`;
